--- a/index.css
+++ b/index.css
@@ -1,5 +1,4 @@
-/* RESET CSS
-courtesy of:
+/* RESET CSS courtesy of:
  http://meyerweb.com/eric/tools/css/reset/ v2.0 | 20110126 License: none (public domain)
 */
 
@@ -21,16 +20,15 @@ time, mark, audio, video {
 	border: 0;
 	font-size: 100%;
 	font: inherit;
-	vertical-align: baseline;
+    vertical-align: baseline;
+    font-family: 'Roboto Mono', monospace; /*this is the primary font*/
 }
 
 .body {
-    font-family: 'Roboto Mono', monospace; /*this is the primary font*/
-    font-size: 62.5%
+    font-size: 62.5%;
 }
 
 header {
-    font-family: 'Chelsea Market', cursive; /*this is the font only within the header section*/
     line-height: 2.5;
     text-align: center;
 }
@@ -42,6 +40,7 @@ header div {
 
 header h1 {
     font-size: 4rem;
+    font-family: 'Chelsea Market', cursive; /*this is the font only within the header section*/
 }
 
 header img {
@@ -67,28 +66,34 @@ h2 {
     text-align: center;
 }
 
-a {
-    text-decoration: none;
-    color: white;
-    margin: 20px;
-    padding: 20px 5px;
-    border-radius: 15px;
-    font-size: 2rem;
-    text-align: center;
-    border: 3px solid black;
+nav {
+    padding: 20px;
+    margin-bottom: 50px;
+    text-align: center; /* this centers the boxs within the webpage. crazy right? */
 }
 
-.button1 { /* Plan your Visit */
+.navbutton {
+    text-decoration: none;
+    color: white;
+    margin: 20px 100px;
+    padding: 5px 30px;
+    border-radius: 15px;
+    font-size: 1.5rem;
+    text-align: center;
+    /* border: 3px solid black; */ /*used for testing*/
+}
+
+.plan { /* Plan your Visit */
     display: inline-block;
     background-color: #FF764E;
 }
 
-.button2 { /* Learn About the Park */
+.learn { /* Learn About the Park */
     display: inline-block;
     background-color: #5ED3EB;
 }
 
-.button3 { /* Get Involved */
+.get { /* Get Involved */
     display: inline-block;
     background-color: #FFCD69;
 }
@@ -102,6 +107,22 @@ section img {
 }
 
 section p {
+    font-family: 'Roboto Mono', monospace; /*this is the primary font*/
     font-size: 1rem;
     text-align: center;
+    margin: 0 auto 75px auto;
+    width: 300px;
+}
+
+span {
+    font-weight: bold;
+}
+footer img {
+    width: 100%;
+    height: 400px;
+}
+
+
+footer nav {
+    background-color:#F9E7DC;
 }
